# cheatscan

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: build.yml  test.yml
benches/: bench_u8.rs
include/: cheatscan.h  cheatscan_types.h
playground/: README.md  main.c  main.js
src/: ffi.rs  lib.rs
src/scanner/: alignment.rs  comparison.rs  configuration.rs  endianness.rs  mod.rs  scan_error.rs  scan_value.rs  scanner.rs  value_reader.rs  value_type.rs
tests/: ffi_integration.rs
