[package]
name = "cheatscan"
version = "0.9.1"
edition = "2024"
authors = ["Arnaud 'red' Rouyer"]
readme = "README.md"
license = "MIT"
description = "A lightweight memory scanning library for Rust, C, and WASM. Implements classic cheat-engine style workflows with a stable, low-level FFI and zero-allocation scan passes."
homepage = "https://github.com/joshleaves/cheatscan"
repository = "https://github.com/joshleaves/cheatscan"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
name = "cheatscan"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
strip = true      # Strip symbols
panic = "abort"   # Abort on panic
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_exact_u8"
harness = false